RESOLVED FIXED 102971
REGRESSION(r135399): Wrong assertion causing an assertion failure: m_rawAttributes.initialScale > 0
https://bugs.webkit.org/show_bug.cgi?id=102971
Summary REGRESSION(r135399): Wrong assertion causing an assertion failure: m_rawAttri...
Thiago Marcos P. Santos
Reported 2012-11-21 12:43:28 PST
crash log for WebKitTestRunner (pid 9248): STDOUT: <empty> STDERR: ASSERTION FAILED: m_rawAttributes.initialScale > 0 STDERR: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/Source/WebKit2/UIProcess/PageViewportController.cpp(152) : void WebKit::PageViewportController::pageTransitionViewportReady() STDERR: 1 0x7f0bd508cd5a WebKit::PageViewportController::pageTransitionViewportReady() STDERR: 2 0x7f0bd52b0579 WebKit::PageClientDefaultImpl::pageTransitionViewportReady() STDERR: 3 0x7f0bd50e2535 WebKit::WebPageProxy::pageTransitionViewportReady() STDERR: 4 0x7f0bd52e889e void CoreIPC::callMemberFunction<WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)()>(CoreIPC::Arguments0 const&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)()) STDERR: 5 0x7f0bd52e4eaa void CoreIPC::handleMessage<Messages::WebPageProxy::PageTransitionViewportReady, WebKit::WebPageProxy, void (WebKit::WebPageProxy::*)()>(CoreIPC::MessageDecoder&, WebKit::WebPageProxy*, void (WebKit::WebPageProxy::*)()) STDERR: 6 0x7f0bd52de2bd WebKit::WebPageProxy::didReceiveWebPageProxyMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::MessageDecoder&) STDERR: 7 0x7f0bd50dd8d9 WebKit::WebPageProxy::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::MessageDecoder&) STDERR: 8 0x7f0bd511e9f5 WebKit::WebProcessProxy::didReceiveMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::MessageDecoder&) STDERR: 9 0x7f0bd5006e64 CoreIPC::Connection::dispatchMessage(CoreIPC::MessageID, CoreIPC::MessageDecoder&) STDERR: 10 0x7f0bd5006fd0 CoreIPC::Connection::dispatchMessage(CoreIPC::Connection::Message<CoreIPC::MessageDecoder>&) STDERR: 11 0x7f0bd500721b CoreIPC::Connection::dispatchOneMessage() STDERR: 12 0x7f0bd50113bc WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>::operator()(CoreIPC::Connection*) STDERR: 13 0x7f0bd50111c2 WTF::BoundFunctionImpl<WTF::FunctionWrapper<void (CoreIPC::Connection::*)()>, void (CoreIPC::Connection*)>::operator()() STDERR: 14 0x7f0bdc1b8dca WTF::Function<void ()>::operator()() const STDERR: 15 0x7f0bd867fc5e WebCore::RunLoop::performWork() STDERR: 16 0x7f0bd909d69b WebCore::RunLoop::wakeUpEvent(void*, void*, unsigned int) STDERR: 17 0x7f0bd441a621 STDERR: 18 0x7f0bd4419571 STDERR: 19 0x7f0bd4419ab7 ecore_main_loop_begin STDERR: 20 0x43362b WTR::TestController::platformRunUntil(bool&, double) STDERR: 21 0x41e94e WTR::TestController::runUntil(bool&, WTR::TestController::TimeoutDuration) STDERR: 22 0x425a06 WTR::TestInvocation::invoke() STDERR: 23 0x41e686 WTR::TestController::runTest(char const*) STDERR: 24 0x41e7bf WTR::TestController::runTestingServerLoop() STDERR: 25 0x41e859 WTR::TestController::run() STDERR: 26 0x41c291 WTR::TestController::TestController(int, char const**) STDERR: 27 0x4337c6 main STDERR: 28 0x7f0bd2f7a76d __libc_start_main STDERR: 29 0x41ac09 STDERR: LEAK: 2 CachedResource
Attachments
patch (1.96 KB, patch)
2012-11-22 02:38 PST, Mikhail Pozdnyakov
no flags
Andras Becsi
Comment 1 2012-11-22 02:26:08 PST
Ouch, the assertion is not actually wrong, but my patch was not complete. I think I know what's going on, and can fix it. Mikhail, I see you assigned it to yourself, do you mind if I clean up my mess instead?
Mikhail Pozdnyakov
Comment 2 2012-11-22 02:38:42 PST
Mikhail Pozdnyakov
Comment 3 2012-11-22 02:42:36 PST
(In reply to comment #1) > Ouch, the assertion is not actually wrong, but my patch was not complete. > I think I know what's going on, and can fix it. > > Mikhail, I see you assigned it to yourself, do you mind if I clean up my mess instead? sorry, did not see your message. Uploaded already a patch, feel free to take the bug if you see the patch does not suffice or wrong.
Andras Becsi
Comment 4 2012-11-22 03:05:44 PST
Comment on attachment 175632 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=175632&action=review I think this is the right fix. The patch looks good to me. > Source/WebKit2/ChangeLog:9 > + m_rawAttributes.initialScale has to be initialized even if m_minimumScaleToFit hasn't changed > + it's value. Indeed, the basic problem was that m_minimumScaleToFit is initialized to 1 and if the calculated minimum scale to fit turned out to be 1 we wrongly returned early and did not initialize the initialScale attribute.
Raphael Kubo da Costa (:rakuco)
Comment 5 2012-11-22 04:15:35 PST
Comment on attachment 175632 [details] patch Clearing flags on attachment: 175632 Committed r135504: <http://trac.webkit.org/changeset/135504>
Raphael Kubo da Costa (:rakuco)
Comment 6 2012-11-22 04:15:42 PST
All reviewed patches have been landed. Closing bug.
Thiago Marcos P. Santos
Comment 7 2012-11-23 06:11:18 PST
*** Bug 102922 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.