REGRESSION(r135399): Wrong assertion causing an assertion failure: m_rawAttributes.initialScale > 0 https://bugs.webkit.org/show_bug.cgi?id=102971

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-11-22
Reviewed by Kenneth Rohde Christiansen.

m_rawAttributes.initialScale has to be initialized even if m_minimumScaleToFit hasn't changed
it's value.

* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::didChangeViewportAttributes):


git-svn-id: svn://svn.chromium.org/blink/trunk@135504 bbb929c8-8fbe-4397-9dbb-9b2b20218538