third_party/WebKit/Source/WebKit2/UIProcess/PageViewportController.cpp
@@ -220,8 +220,7 @@ void PageViewportController::didChangeViewportAttributes(const WebCore::Viewport
     m_rawAttributes = newAttributes;
     m_allowsUserScaling = !!m_rawAttributes.userScalable;
 
-    if (!updateMinimumScaleToFit())
-        return;
+    bool minimumScaleUpdated = updateMinimumScaleToFit();
 
     ASSERT(m_minimumScaleToFit > 0);
 
@@ -231,7 +230,8 @@ void PageViewportController::didChangeViewportAttributes(const WebCore::Viewport
 
     WebCore::restrictScaleFactorToInitialScaleIfNotUserScalable(m_rawAttributes);
 
-    m_client->didChangeViewportAttributes();
+    if (minimumScaleUpdated)
+        m_client->didChangeViewportAttributes();
 }
 
 WebCore::FloatSize PageViewportController::viewportSizeInContentsCoordinates() const
